genium/src/test/resources/smoke/errors/output/swift/ErrorsExtensions.swift
//
//
// Automatically generated. Do not modify. Your changes will be lost.
import Foundation
extension Errors.ExternalErrors : Error {
}
extension Errors.InternalError : Error {
}
extension ExternalErrors : Error {
}
extension InternalError : Error {
}
extension SomeTypeCollectionError : Error {
}